# col-mem

./: .gitignore  README.md  config.toml  pyproject.toml
doc/: Project.org
emacs/: col-mem.el  col-save-mem.el
src/col_mem/: cli.py  config.py  memory.py
tests/: conftest.py  test_memory.py  test_search.py
